feat: switching to java 25