@@ -2,10 +2,9 @@ import com.google.protobuf.gradle.id
 
 plugins {
   application
-  jacoco
 
   id("com.google.protobuf") version "0.9.4"
-  id("org.pkl-lang") version "0.29.0"
+  id("org.pkl-lang") version "0.30.2"
   id("com.ncorti.ktfmt.gradle") version "0.24.0"
 
   kotlin("jvm")
@@ -19,9 +18,7 @@ application { mainClass = "at.ac.uibk.dps.cirrina.cirrina.CirrinaKt" }
 
 ktfmt { googleStyle() }
 
-java { toolchain { languageVersion = JavaLanguageVersion.of(21) } }
-
-jacoco { toolVersion = "0.8.11" }
+java { toolchain { languageVersion.set(JavaLanguageVersion.of(25)) } }
 
 pkl {
   javaCodeGenerators {
@@ -114,21 +111,24 @@ repositories {
   maven(url = "https://repository.cloudera.com/artifactory/cloudera-repos/")
 }
 
+val jvmArgs =
+  listOf("-XX:+UseZGC", "-XX:+AlwaysPreTouch", "-Xms4G", "-Xmx4G", "-XX:MaxDirectMemorySize=1G")
+
 tasks.compileKotlin { dependsOn(tasks.ktfmtFormat) }
 
 tasks.distZip { archiveFileName.set("${project.name}.zip") }
 
 tasks.test {
   useJUnitPlatform()
-  finalizedBy(tasks.jacocoTestReport)
+  jvmArgs(jvmArgs)
 }
 
-tasks.jacocoTestReport {
-  dependsOn(tasks.test)
-  reports {
-    xml.required = true
-    html.required = false
-    csv.required = false
+tasks.withType<JavaExec> { jvmArgs(jvmArgs) }
+
+tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
+  compilerOptions {
+    jvmTarget.set(org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_25)
+    freeCompilerArgs.addAll("-Xlambdas=indy", "-Xemit-jvm-type-annotations")
   }
 }
 
